--- a/config/nav.yml
+++ b/config/nav.yml
@@ -67,7 +67,7 @@ nav:
             - Creating a Service: developer/serving/services/creating-services.md
             - Service metrics: developer/serving/services/service-metrics.md
             - Configuring private Services: developer/serving/services/private-services.md
-            - Configuring Services custom Ingress Class: developer/serving/services/ingress-class.md
+            - Configuring Services custom ingress class: developer/serving/services/ingress-class.md
             - Configuring custom domains: developer/serving/services/custom-domains.md
             - Using a custom TLS certificate for DomainMapping: developer/serving/services/byo-certificate.md
             - Configure resource requests and limits: developer/serving/services/configure-requests-limits-services.md
