--- a/config/nav.yml
+++ b/config/nav.yml
@@ -42,12 +42,14 @@ nav:
           - Overview: admin/upgrade/README.md
           - Upgrading with the Knative Operator: admin/upgrade/upgrade-installation-with-operator.md
           - Upgrading with kubectl: admin/upgrade/upgrade-installation.md
-        - Logging: admin/collecting-logs/README.md
+        - Logging: admin/observability/collecting-logs/README.md
         # Administrator metrics
-        - Metrics:
-          - About metrics: admin/collecting-metrics/README.md
-          - Knative Eventing metrics: admin/collecting-metrics/eventing-metrics/metrics.md
-          - Knative Serving metrics: admin/collecting-metrics/serving-metrics/metrics.md
+	- Observability
+	  - Collecting logs: admin/observability/collecting-logs/README.md
+          - Collecting metrics: admin/observability/collecting-metrics/README.md
+	  - Configuring logging: admin/observibility/config-logging/logging.md
+          - Knative Eventing metrics: admin/observability/collecting-metrics/eventing-metrics/metrics.md
+          - Knative Serving metrics: admin/observability/collecting-metrics/serving-metrics/metrics.md
         - Uninstalling Knative: admin/install/uninstall.md
         # Serving config
         - Knative Serving configuration:
