--- a/config/nav.yml
+++ b/config/nav.yml
@@ -60,6 +60,7 @@ nav:
         - Knative Eventing configuration:
           - Configure Broker defaults: admin/eventing/broker-configuration.md
           - Configure Kafka Channel defaults: admin/eventing/kafka-channel-configuration.md
+          - Configure Sources defaults: admin/eventing/sources-configuration.md
     # Developer guide
     - Developer guide:
         - Overview: developer/README.md
