--- a/config/nav.yml
+++ b/config/nav.yml
@@ -149,7 +149,7 @@ nav:
         - Configuring HTTPS connections: serving/using-a-tls-cert.md
         - Enabling auto-TLS certs: serving/using-auto-tls.md
         - Configuring the ingress gateway: serving/setting-up-custom-ingress-gateway.md
-        - Setting up a custom domain: serving/using-a-custom-domain.md
+        - Changing the default domain: serving/using-a-custom-domain.md
         - Converting a Kubernetes Deployment to a Knative Service: serving/convert-deployment-to-knative-service.md
       - Code samples:
         - Overview: serving/samples/README.md
