--- a/config/nav.yml
+++ b/config/nav.yml
@@ -83,6 +83,7 @@ nav:
           - Troubleshooting:
             - Debugging application issues: developer/serving/troubleshooting/debugging-application-issues.md
         - Knative Eventing:
+          - Overview: developer/eventing/README.md
           - Event sources:
             - Overview: developer/eventing/sources/README.md
             - Creating an event source:
@@ -113,7 +114,7 @@ nav:
               - Overview: developer/eventing/sources/sinkbinding/README.md
               - Creating a SinkBinding object: developer/eventing/sources/sinkbinding/getting-started.md
               - SinkBinding reference: developer/eventing/sources/sinkbinding/reference.md
-          - Event delivery: developer/eventing/event-delivery.md
+          - Handling delivery failure: developer/eventing/event-delivery.md
           - Event sinks:
             - About sinks: developer/eventing/sinks/README.md
             - KafkaSink: developer/eventing/sinks/kafka-sink.md
