--- a/config/nav.yml
+++ b/config/nav.yml
@@ -234,6 +234,7 @@ nav:
           - Overview: eventing/samples/helloworld/README.md
           - GO: eventing/samples/helloworld/helloworld-go/README.md
           - Python: eventing/samples/helloworld/helloworld-python/README.md
+        - Writing an event source using Javascript: eventing/samples/writing-event-source-easy-way/README.md
         - Apache Kafka:
           - Binding Example: eventing/samples/kafka/binding/README.md
           - Channel Example: eventing/samples/kafka/channel/README.md
