--- a/config/nav.yml
+++ b/config/nav.yml
@@ -58,6 +58,7 @@ nav:
           - Configure the Defaults ConfigMap: admin/serving/config-defaults.md
         # Eventing config
         - Knative Eventing configuration:
+          - Configure Channel defaults: admin/eventing/channel-configuration.md
           - Configure Broker defaults: admin/eventing/broker-configuration.md
           - Configure Kafka Channel defaults: admin/eventing/kafka-channel-configuration.md
           - Configure event source defaults: admin/eventing/sources-configuration.md
