--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -30,7 +30,7 @@ nav:
           - releases/announcing-knative-v0-3-release.md
           - releases/announcing-knative-v0-2-release.md
       - Articles:
-          - articles/announcing-knative-1.0
+          - articles/announcing-knative-1.0.md
             articles/quickstart-with-knative.md
           - articles/distributed-tracing.md
           - articles/event-drive-app-knative-eventing-kogito.md
