Collect admin observability docs into a section. (#4307)
* Collect admin observability docs into a section.

Add docs for  parameters

* Emacs snuck some tabs in. Forgot to install yaml-mode

* Lost a ':' somehow

* Fix up additional links in nav and redirects from build warnings.

* Actually _read_ the mkdocs error, realize I had a typo.

* Fix LHS nav that was using README.md

* Ah kint typo so gud.

* Fix merge oopsie

* Apparently I suck at merges

* Address @snneji feedback

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -53,12 +53,13 @@ nav:
           - Upgrading with kubectl: admin/upgrade/upgrade-installation.md
         # Uninstall
         - Uninstalling Knative: admin/install/uninstall.md
-        # Observability
-        - Logging: admin/collecting-logs/README.md
-        - Metrics:
-          - About metrics: admin/collecting-metrics/README.md
-          - Knative Eventing metrics: admin/collecting-metrics/eventing-metrics/metrics.md
-          - Knative Serving metrics: admin/collecting-metrics/serving-metrics/metrics.md
+        # Administrator configuration of observability tools
+        - Observability:
+          - Collecting logs: admin/observability/collecting-logs/collecting-logs.md
+          - Collecting metrics: admin/observability/collecting-metrics/collecting-metrics.md
+          - Configuring logging: admin/observability/config-logging/logging.md
+          - Knative Eventing metrics: admin/observability/collecting-metrics/eventing-metrics/metrics.md
+          - Knative Serving metrics: admin/observability/collecting-metrics/serving-metrics/metrics.md
         # Serving config
         - Knative Serving configuration:
           - Revision garbage collection: admin/serving/revision-gc.md
